# SigMF-Annotator

./: .gitignore  README.md  build_windows.bat  pyproject.toml  sigmf_annotator.spec
sigmf_dataset/: data.sigmf-meta
src/annotator/: dummy_data_gen.py  sigmf_annotator.py
src/annotator/detectors/: example_detector.py
