[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmf_waterfall_annotator"
version = "1.1.0"
description = "Annotator for SigMF datasets."
dependencies = [
    "numpy",
    "PyQt6"
]

[tool.setuptools]
packages = ["annotator"]

[tool.setuptools.package-dir]
"" = "src"
