[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmf_waterfall_annotator"
version = "2.0.0"
description = "Interactive waterfall annotator for SigMF datasets."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "PyQt6",
]

[project.scripts]
sigmf-annotator = "annotator.sigmf_annotator:main"

[tool.setuptools]
packages = ["annotator", "annotator.detectors"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"annotator.detectors" = ["*.py"]